# pomodoro-timer

./: .gitignore  README.md
.github/workflows/: release.yml
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
