[package]
name = "pomodoro-timer"
version = "1.0.0"
description = "一个简洁美观的番茄钟应用"
authors = ["PomodoroTimer"]
edition = "2021"

[lib]
name = "pomodoro_timer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
